@@ -1,3 +1,6 @@
+2013-08-20  Kirit Saelensminde  <kirit@felspar.com>
+ Added `fostlib::log::flush()` which blocks until the previous logged messages have been processed.
+
 2013-06-07  Kirit Saelensminde  <kirit@felspar.com>
  The environment variable VERSION can now be used to specify an embedded version number in the result of fost-lib derived targets, or other shared libraries that make use of the <version> property.
 
